--- a/celestial-categorizer/src/main/resources/application.properties
+++ b/celestial-categorizer/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-#TARGET_TOPIC=${env:TARGET_TOPIC}
-TARGET_TOPIC=test-topic
+TELESCOPE_FEED_TOPIC=telescope-feed
+METADATA_TOPIC=db-celestial-metadata
+PLANETS_TOPIC=planets
+STARS_TOPIC=stars
+ASTEROIDS_TOPIC=asteriods
